--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -31,8 +31,8 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+    - run: |
+        gradlew build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
